Update Boghoyo farming and transportation.html

--- a/Boghoyo farming and transportation.html
+++ b/Boghoyo farming and transportation.html
@@ -72,7 +72,7 @@
 
     <!-- Contact Section -->
     <section id="contact">
-      <h2>Come with Us</h2>
+      <h2>contact Us</h2>
       <form>
         <input type="text" placeholder=" Full Name">
         <input type="email" placeholder="Email">
